--- a/src/meson.build
+++ b/src/meson.build
@@ -4,3 +4,11 @@ monkey_lib = library(
     include_directories : incdir
 )
 
+monkey_test = executable(
+    'monkey_test',
+    'lexer_test.cpp',
+    dependencies : [gtest_dep, gtest_main_dep]
+)
+
+test('monkey tests', monkey_test)
+
