--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,8 @@
 project('monkey', 'cpp', default_options : ['warning_level=3', 'cpp_std=c++20'])
 
+gtest_dep = dependency('gtest')
+gtest_main_dep = dependency('gtest_main')
+
 incdir = include_directories('inc')
 subdir('src')
 
