First passing test

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,5 +1,6 @@
 monkey_lib = library(
     'monkey',
+    'lexer.cpp',
     'token.cpp',
     include_directories : incdir
 )
@@ -7,6 +8,8 @@ monkey_lib = library(
 monkey_test = executable(
     'monkey_test',
     'lexer_test.cpp',
+    include_directories : incdir,
+    link_with : monkey_lib,
     dependencies : [gtest_dep, gtest_main_dep]
 )
 
