--- a/meson.build
+++ b/meson.build
@@ -2,6 +2,7 @@ project('monkey', 'cpp', default_options : ['warning_level=3', 'cpp_std=c++20'])
 
 gtest_dep = dependency('gtest')
 gtest_main_dep = dependency('gtest_main')
+subprocess_dep = dependency('subprocess')
 
 incdir = include_directories('inc')
 subdir('src')
