--- a/src/meson.build
+++ b/src/meson.build
@@ -5,6 +5,15 @@ monkey_lib = library(
     include_directories : incdir
 )
 
+monkey_repl = executable(
+    'monkey-repl',
+	'repl_main.cpp',
+    'repl.cpp',
+    include_directories : incdir,
+    link_with : monkey_lib,
+	dependencies : [subprocess_dep]
+)
+
 monkey_test = executable(
     'monkey_test',
     'lexer_test.cpp',
