switch to doctest

--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,6 @@
 project('monkey', 'cpp', default_options : ['warning_level=3', 'cpp_std=c++20'])
 
-gtest_dep = dependency('gtest')
-gtest_main_dep = dependency('gtest_main')
+doctest_dep = dependency('doctest')
 
 incdir = include_directories('inc')
 subdir('src')
